[project]
name = "librechat_exporter"
version = "2.2.0"
description = "LibreChat Metrics Exporter - Collects and exposes metrics from LibreChat for monitoring via Prometheus"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.0",
    "prometheus-client==0.22.1",
    "pymongo==4.13.2",
    "python-dotenv==1.1.1",
    "twisted==25.5.0",
]


[dependency-groups]
dev = [
    "ruff==0.12.7",
    "ty==0.0.1a16",
]

[tool.ruff]
line-length = 120
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
